Needs to be connected with Backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
@@ -26,7 +27,8 @@
     "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
