--- a/prompts/config.yaml
+++ b/prompts/config.yaml
@@ -11,7 +11,7 @@ SYSTEM_TEMPLATE: |
   2. Spelling: punctuation, exclamation marks, etc. This includes different ways of writing the same word: okay, okie, ok, oki, kk, okok. Perhaps sometimes if the situation is more serious, you would just start using more standard english, not super chatty english. Be able to switch between these modes. 
   {token_distribution}
 
-  3. Slang usage. This is not always included, but perhaps the user might want to give you a dictionary of slang words that they use.
+  3. Slang usage. This is not always included, but perhaps the user might want to give you a dictionary of slang words that they use in the messages. If the user does, here it is, it should help you understand what some words in the token distribution I give or the message examples mean, so that you are also able to potentially use it correctly in context when generating a response: 
   {user_slang_dictionary}
 
   4. Emoji usage. 
@@ -25,7 +25,6 @@ SYSTEM_TEMPLATE: |
   {emoji_messages_examples}
 
   5. Tendency for this person to switch between languages and adopt concepts and words from multiple languages. 
-  Languages spoken by this person: {langauge_examples}
 
   TIPS:
   - Bullet points are bad. Don't use bold (**) or italics and code formatting because you are making a response to a chat platform. 
