--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,50 @@
-name: talklikeyou
+name: type-like-you
 channels:
+  - conda-forge
   - defaults
-prefix: /Users/matthewtaruno/opt/anaconda3/envs/talklikeyou
+dependencies:
+  - bzip2=1.0.8
+  - ca-certificates=2024.6.2
+  - emoji=2.12.1
+  - libexpat=2.6.2
+  - libffi=3.4.2
+  - libsqlite=3.45.3
+  - libzlib=1.3.1
+  - ncurses=6.5
+  - openssl=3.3.1
+  - pip=24.0
+  - python=3.12.3
+  - readline=8.2
+  - setuptools=70.0.0
+  - tk=8.6.13
+  - typing_extensions=4.12.2
+  - tzdata=2024a
+  - wheel=0.43.0
+  - xz=5.2.6
+  - pip:
+      - annotated-types==0.7.0
+      - anyio==4.4.0
+      - blinker==1.8.2
+      - certifi==2024.6.2
+      - click==8.1.7
+      - distro==1.9.0
+      - flask==3.0.3
+      - flask-cors==4.0.1
+      - h11==0.14.0
+      - httpcore==1.0.5
+      - httpx==0.27.0
+      - idna==3.7
+      - itsdangerous==2.2.0
+      - jinja2==3.1.4
+      - langdetect==1.0.9
+      - markupsafe==2.1.5
+      - openai==1.33.0
+      - pydantic==2.7.3
+      - pydantic-core==2.18.4
+      - python-dotenv==1.0.1
+      - pyyaml==6.0.1
+      - six==1.16.0
+      - sniffio==1.3.1
+      - tqdm==4.66.4
+      - werkzeug==3.0.3
+prefix: /Users/matthewtaruno/anaconda3/envs/type-like-you
